Add dataclass for WflowParameterSet

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "477bb53c",
+   "id": "00e1566c",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f6c4ca",
+   "id": "bed501aa",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e6fe53",
+   "id": "d3277ce4",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b8ccaba",
+   "id": "b766469b",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96004182",
+   "id": "6d3dd907",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,7 +71,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b22e55a",
+   "id": "7ebfed0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "08124ea2",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +102,7 @@
        "('2019.1', '2020.1')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,30 +114,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "17f56863",
+   "execution_count": 3,
+   "id": "cf3010a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WflowParameterSet(input_data=PosixPath('wflow_example_case_nc'), default_config=PosixPath('wflow_example_case_nc/wflow_sbm.ini'))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pathlib import Path\n",
-    "forcing = ewatercycle.models.wflow.WflowForcing(Path('../test_forcing_data.nc'), Precipitation = \"/P\", EvapoTranspiration = \"/PET\", Temperature = \"/TEMP\")"
+    "parameter_set = ewatercycle.models.wflow.WflowParameterSet(\n",
+    "    input_data = Path(\"./wflow_example_case_nc/\"),\n",
+    "    default_config = Path(\"./wflow_example_case_nc/wflow_sbm.ini\"),\n",
+    ")\n",
+    "parameter_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cfdc884f",
+   "execution_count": 4,
+   "id": "0acf81a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WflowForcing(netcdfinput=PosixPath('../test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = ewatercycle.models.Wflow(version='2019.1', parameter_set=\"./wflow_example_case_nc/\", forcing=forcing)\n",
-    "# model = ewatercycle.models.Wflow(version='2019.1', parameter_set=\"./wflow_example_case/\", forcing=\"./wflow_example_case/inmaps/\")"
+    "forcing = ewatercycle.models.wflow.WflowForcing(\n",
+    "    Path('../test_forcing_data.nc'),\n",
+    "    Precipitation = \"/P\", \n",
+    "    EvapoTranspiration = \"/PET\", \n",
+    "    Temperature = \"/TEMP\",\n",
+    ")\n",
+    "forcing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8d99dc75",
+   "execution_count": 5,
+   "id": "d8fb4948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ewatercycle.models.Wflow(version='2019.1', parameter_set=parameter_set, forcing=forcing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a6bd4be",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +235,7 @@
        " ('API', {})]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "87f186be",
+   "execution_count": 7,
+   "id": "5d98690f",
    "metadata": {
     "tags": []
    },
@@ -210,18 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9541acd7",
+   "execution_count": 8,
+   "id": "97dc9584",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_141718/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_141718'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703'))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9039c50e",
+   "execution_count": 9,
+   "id": "df95994c",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +341,7 @@
        " ('API', {'RiverRunoff': '2, m^3/s'})]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0575ef21",
+   "id": "5521708e",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -310,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "c26d841e",
+   "execution_count": 10,
+   "id": "20f907ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_141718/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703/wflow_ewatercycle.ini')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "3748f59f",
+   "execution_count": 11,
+   "id": "75fc65e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "59cf0257",
+   "execution_count": 12,
+   "id": "cd07a07c",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +402,7 @@
        "array([-999., -999., -999., ..., -999., -999., -999.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8b95f2ff",
+   "execution_count": 13,
+   "id": "847d8cb4",
    "metadata": {
     "tags": []
    },
@@ -736,13 +786,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c49c4899-b428-46c6-8729-1bde5a79119a' class='xr-array-in' type='checkbox' checked><label for='section-c49c4899-b428-46c6-8729-1bde5a79119a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9590ad76-3f87-41c3-bb1a-76ed8b9f250e' class='xr-array-in' type='checkbox' checked><label for='section-9590ad76-3f87-41c3-bb1a-76ed8b9f250e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-35a6ef95-1eb7-49ec-89d2-a12a2177f68a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-35a6ef95-1eb7-49ec-89d2-a12a2177f68a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-ef6c7e02-3f8a-4e05-a649-f537124d492d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ef6c7e02-3f8a-4e05-a649-f537124d492d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f2c5dd57-e618-4c69-9b76-cb5653db9033' class='xr-var-data-in' type='checkbox'><label for='data-f2c5dd57-e618-4c69-9b76-cb5653db9033' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-828fea7e-1a5a-45dc-b49d-da17a72d88e0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-828fea7e-1a5a-45dc-b49d-da17a72d88e0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-bc80ba43-28b6-44b4-be4c-06928d34fae5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bc80ba43-28b6-44b4-be4c-06928d34fae5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-95f912ed-9be8-4f71-951f-31264126a936' class='xr-var-data-in' type='checkbox'><label for='data-95f912ed-9be8-4f71-951f-31264126a936' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -773,7 +823,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-a3548613-82bd-4c59-955e-2d19fc8ab628' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a3548613-82bd-4c59-955e-2d19fc8ab628' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2f4e450e-d788-44fb-8ad0-778f25066c7e' class='xr-var-data-in' type='checkbox'><label for='data-2f4e450e-d788-44fb-8ad0-778f25066c7e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-8a63c636-f281-4e1d-abb8-6b4fe6353582' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8a63c636-f281-4e1d-abb8-6b4fe6353582' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-18598765-ef88-4292-b5f2-08dcffd17d22' class='xr-var-data-in' type='checkbox'><label for='data-18598765-ef88-4292-b5f2-08dcffd17d22' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -801,7 +851,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-07d35b8e-70e2-41ea-8dbc-4893ec67b3b0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-07d35b8e-70e2-41ea-8dbc-4893ec67b3b0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-50f18925-b488-4814-b86e-f80115a1ddd9' class='xr-var-data-in' type='checkbox'><label for='data-50f18925-b488-4814-b86e-f80115a1ddd9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-6a0a08df-1280-43fc-8b24-564a79fc18a4' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6a0a08df-1280-43fc-8b24-564a79fc18a4' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-211565d8-b2d0-427b-a983-3aa32f599829' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-211565d8-b2d0-427b-a983-3aa32f599829' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-096e1195-e31f-49ed-9cff-dc386ac4ea2b' class='xr-var-data-in' type='checkbox'><label for='data-096e1195-e31f-49ed-9cff-dc386ac4ea2b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-22bc315f-55a3-4acd-9a94-a80e9f8fef43' class='xr-section-summary-in' type='checkbox'  checked><label for='section-22bc315f-55a3-4acd-9a94-a80e9f8fef43' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -820,7 +870,7 @@
        "    units:     m^3/s"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,8 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "94820f6b",
+   "execution_count": 14,
+   "id": "fb473905",
    "metadata": {},
    "outputs": [
     {
@@ -878,17 +928,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a3f2cb23",
+   "execution_count": 15,
+   "id": "c47fbd79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fed2b75ea90>"
+       "<matplotlib.collections.QuadMesh at 0x7f69f79177f0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -912,8 +962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "a0243293",
+   "execution_count": 16,
+   "id": "58cd21a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,8 +972,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4d9dc647",
+   "execution_count": 17,
+   "id": "9e123695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce3b519",
+   "id": "07ddb6ba",
    "metadata": {},
    "outputs": [],
    "source": []
