Update text in notebook and add suggestion for moving paths

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00e1566c",
+   "id": "6e55033f",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed501aa",
+   "id": "01487c26",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3277ce4",
+   "id": "fa252692",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b766469b",
+   "id": "3aba5874",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -49,9 +49,8 @@
     "\n",
     "```Yaml\n",
     "container_engine: docker # or singularity\n",
-    "singularity_images.wflow: 'ewatercycle-wflow-grpc4bmi.sif'\n",
-    "docker_images.wflow: 'ewatercycle/wflow-grpc4bmi:latest'\n",
-    "scratch_dir: './' # the directory where the model work_dir will be created\n",
+    "singularity_dir: './' # the directory where singularity images are stored\n",
+    "output_dir: './' # the directory where the model work_dir will be created\n",
     "```\n",
     "\n",
     "In order for this to work, you need to make sure that the actual docker or singularity images are available on the system. This can be done with:\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3dd907",
+   "id": "110e8818",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,17 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ebfed0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "08124ea2",
+   "id": "f771839a",
    "metadata": {},
    "outputs": [
     {
@@ -102,20 +91,21 @@
        "('2019.1', '2020.1')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from pathlib import Path\n",
     "import ewatercycle.models\n",
     "ewatercycle.models.Wflow.available_versions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cf3010a7",
+   "execution_count": 2,
+   "id": "a2f0911f",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +114,7 @@
        "WflowParameterSet(input_data=PosixPath('wflow_example_case_nc'), default_config=PosixPath('wflow_example_case_nc/wflow_sbm.ini'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0acf81a4",
+   "execution_count": 3,
+   "id": "29f689a2",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +139,7 @@
        "WflowForcing(netcdfinput=PosixPath('../test_forcing_data.nc'), Precipitation='/P', EvapoTranspiration='/PET', Temperature='/TEMP', Inflow=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d8fb4948",
+   "execution_count": 4,
+   "id": "e32bf6cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8a6bd4be",
+   "execution_count": 5,
+   "id": "8b8ab3d3",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +225,7 @@
        " ('API', {})]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5d98690f",
+   "execution_count": 6,
+   "id": "2df73bd5",
    "metadata": {
     "tags": []
    },
@@ -260,18 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "97dc9584",
+   "execution_count": 7,
+   "id": "5781629a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944'))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "df95994c",
+   "execution_count": 8,
+   "id": "7e170b95",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +331,7 @@
        " ('API', {'RiverRunoff': '2, m^3/s'})]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5521708e",
+   "id": "93ca23b6",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -360,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "20f907ec",
+   "execution_count": 9,
+   "id": "a952426c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_145703/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_152944/wflow_ewatercycle.ini')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "75fc65e2",
+   "execution_count": 10,
+   "id": "c4068482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cd07a07c",
+   "execution_count": 11,
+   "id": "b1f0d079",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +392,7 @@
        "array([-999., -999., -999., ..., -999., -999., -999.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,8 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "847d8cb4",
+   "execution_count": 12,
+   "id": "dd1068bf",
    "metadata": {
     "tags": []
    },
@@ -786,13 +776,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9590ad76-3f87-41c3-bb1a-76ed8b9f250e' class='xr-array-in' type='checkbox' checked><label for='section-9590ad76-3f87-41c3-bb1a-76ed8b9f250e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cfe980d2-1746-4e50-968d-bb3cb839951d' class='xr-array-in' type='checkbox' checked><label for='section-cfe980d2-1746-4e50-968d-bb3cb839951d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-828fea7e-1a5a-45dc-b49d-da17a72d88e0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-828fea7e-1a5a-45dc-b49d-da17a72d88e0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-bc80ba43-28b6-44b4-be4c-06928d34fae5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bc80ba43-28b6-44b4-be4c-06928d34fae5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-95f912ed-9be8-4f71-951f-31264126a936' class='xr-var-data-in' type='checkbox'><label for='data-95f912ed-9be8-4f71-951f-31264126a936' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-be058861-0f19-435c-826b-bba1b14a7a0f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-be058861-0f19-435c-826b-bba1b14a7a0f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-474543c1-1264-4972-b30f-d4eb1daefc28' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-474543c1-1264-4972-b30f-d4eb1daefc28' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-412ecd2b-b4fd-4ba6-9aef-405c7164b2bf' class='xr-var-data-in' type='checkbox'><label for='data-412ecd2b-b4fd-4ba6-9aef-405c7164b2bf' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -823,7 +813,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-8a63c636-f281-4e1d-abb8-6b4fe6353582' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8a63c636-f281-4e1d-abb8-6b4fe6353582' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-18598765-ef88-4292-b5f2-08dcffd17d22' class='xr-var-data-in' type='checkbox'><label for='data-18598765-ef88-4292-b5f2-08dcffd17d22' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b7ab1270-8cd1-4c3c-8b83-1c83a4fbc73b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b7ab1270-8cd1-4c3c-8b83-1c83a4fbc73b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d643000d-317f-4afc-9a37-304e3f0c1c66' class='xr-var-data-in' type='checkbox'><label for='data-d643000d-317f-4afc-9a37-304e3f0c1c66' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -851,7 +841,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-211565d8-b2d0-427b-a983-3aa32f599829' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-211565d8-b2d0-427b-a983-3aa32f599829' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-096e1195-e31f-49ed-9cff-dc386ac4ea2b' class='xr-var-data-in' type='checkbox'><label for='data-096e1195-e31f-49ed-9cff-dc386ac4ea2b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-22bc315f-55a3-4acd-9a94-a80e9f8fef43' class='xr-section-summary-in' type='checkbox'  checked><label for='section-22bc315f-55a3-4acd-9a94-a80e9f8fef43' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-4cec93fa-11f7-4cb8-ad68-d0a77a0d17ce' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4cec93fa-11f7-4cb8-ad68-d0a77a0d17ce' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-64d8de01-bd22-491f-9335-15d225274bea' class='xr-var-data-in' type='checkbox'><label for='data-64d8de01-bd22-491f-9335-15d225274bea' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3580d7e1-600d-49e6-9ed1-1e1477d73359' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3580d7e1-600d-49e6-9ed1-1e1477d73359' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -870,7 +860,7 @@
        "    units:     m^3/s"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,8 +871,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fb473905",
+   "execution_count": 13,
+   "id": "c69e76af",
    "metadata": {},
    "outputs": [
     {
@@ -928,17 +918,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c47fbd79",
+   "execution_count": 14,
+   "id": "64c7a70c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f69f79177f0>"
+       "<matplotlib.collections.QuadMesh at 0x7f3b9dcc4430>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -962,8 +952,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "58cd21a6",
+   "execution_count": 15,
+   "id": "225ee7dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,8 +962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9e123695",
+   "execution_count": 16,
+   "id": "9138bedd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ddb6ba",
+   "id": "d72902ea",
    "metadata": {},
    "outputs": [],
    "source": []
